[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1



[workspace.dependencies]
constant_time_eq = { version = "<0.4", default-features = false }
